--- a/pom.xml
+++ b/pom.xml
@@ -31,21 +31,9 @@
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
-            <artifactId>plugin-identitystore</artifactId>
+            <artifactId>module-identitystore-grucertifier</artifactId>
             <version>[1.0.0-SNAPSHOT,)</version>
-            <type>lutece-plugin</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.paris.lutece.plugins</groupId>
-            <artifactId>library-identitystore</artifactId>
-            <version>[1.0.0-SNAPSHOT,)</version>
-            <type>lutece-plugin</type>
-        </dependency>
-        <dependency>
-            <groupId>fr.paris.lutece.plugins</groupId>
-            <artifactId>library-notifygru</artifactId>
-            <version>[1.0.0-SNAPSHOT,)</version>
-               <type>jar</type>
+            <type>jar</type>
         </dependency>
     </dependencies>
 
