--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>module-identitystore-grucertifier</artifactId>
-            <version>[1.0.0-SNAPSHOT,)</version>
+            <version>[1.0.0,)</version>
             <type>jar</type>
         </dependency>
     </dependencies>
