MODIDSTOMC-13 : Change type of dependancy of module gru certifier from jar to lutece-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>module-identitystore-grucertifier</artifactId>
             <version>[1.0.0,)</version>
-            <type>jar</type>
+            <type>lutece-plugin</type>
         </dependency>
     </dependencies>
 
