--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-identitystore-mobilecertifier</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <name>Lutece identitystore mobilecertifier module</name>
 
     <repositories>
@@ -47,7 +47,7 @@
         <connection>scm:git:https://github.com/lutece-secteur-public/gru-module-identitystore-mobilecertifier.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-secteur-public/gru-module-identitystore-mobilecertifier.git</developerConnection>
         <url>https://github.com/lutece-secteur-public/gru-module-identitystore-mobilecertifier.git</url>
-      <tag>module-identitystore-mobilecertifier-1.0.2</tag>
+      <tag>HEAD</tag>
   </scm>
     
 </project>
